🔧 Settings: OpenData API 키 관련 속성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,3 +52,7 @@ cloud:
     credentials:
       accessKey: ${AWS_ACCESS_KEY_ID}
       secretKey: ${AWS_SECRET_ACCESS_KEY}
+
+open-data:
+  api-key: ${OPENDATA_API_KEY}
+  base-url: https://api.odcloud.kr/api/nts-businessman/v1
