--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,7 @@ cloud:
 open-data:
   api-key: ${OPENDATA_API_KEY}
   base-url: https://api.odcloud.kr/api/nts-businessman/v1
+
+ai:
+  server:
+    base-url: http://13.124.81.157:8000/
