:sparkles: 채팅 기능 구현(디버깅 필요)

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     // WebFlux 설정
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    // WebSocket 설정
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
 }
 
 tasks.named('test') {
