--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
 
 #CORS 설정
 cors:
-  allowed-origins: http://localhost:5173
+  allowed-origins: http://localhost:5173, https://masill.netlify.app/
 
 
 # S3
