🔧 Settings: Cors Origin 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,7 +45,8 @@ cors:
     - DELETE
     - PATCH
     - OPTIONS
-  allowed-headers: "*"
+  allowed-headers:
+    - "*"
   allow-credentials: true
 
 # S3
