--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,19 +35,7 @@ spring:
 
 #CORS 설정
 cors:
-  allowed-origins:
-    - http://localhost:5173
-    - https://masill.netlify.app
-  allowed-methods:
-    - GET
-    - POST
-    - PUT
-    - DELETE
-    - PATCH
-    - OPTIONS
-  allowed-headers:
-    - "*"
-  allow-credentials: true
+  allowed-origins: "http://localhost:5173,https://masill.netlify.app"
 
 # S3
 cloud:
