:recycle: application.yml 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
 
 #CORS 설정
 cors:
-  allowed-origins: "http://localhost:5173,https://masill.netlify.app"
+  allowed-origins: "http://localhost:5173,https://masill.netlify.app,https://hyunjun.store"
 
 # S3
 cloud:
